--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -69,7 +69,8 @@ transform: translateY(-50px);
 }
 
 .i-img{
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
     object-fit: cover;
+    border-radius: 50%;
 }
